--- a/package.json
+++ b/package.json
@@ -10,18 +10,28 @@
   },
   "dependencies": {
     "@next/font": "13.1.2",
+    "@tanstack/react-query": "^4.24.4",
+    "@trpc/client": "^10.9.1",
+    "@trpc/next": "^10.9.1",
+    "@trpc/react-query": "^10.9.1",
+    "@trpc/server": "^10.9.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "daisyui": "^2.50.0",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4",
-    "uuid": "9.0.0"
+    "uuid": "9.0.0",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
-    "@types/uuid": "9.0.0"
+    "@types/uuid": "9.0.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
