--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^4.24.4",
     "@types/uuid": "9.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
